// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throws exception for unclear properties 1`] = `"You can use only 'id' or 'passThrough' property in translations but not both."`;

exports[`works with \`passThrough\` property 1`] = `
<Text>
  passThrough test
</Text>
`;

exports[`works with almost any type of \`passThrough\` property 1`] = `
<Text>
  string
</Text>
`;

exports[`works with almost any type of \`passThrough\` property 2`] = `
<Text>
  123
</Text>
`;

exports[`works with almost any type of \`passThrough\` property 3`] = `<Text />`;

exports[`works with almost any type of \`passThrough\` property 4`] = `<Text />`;

exports[`works with translation ID property 1`] = `
<FormattedMessage
  id="ID test"
  values={Object {}}
>
  [Function]
</FormattedMessage>
`;
